Checkstyle configuration.